duvet/src/comment/snapshots/duvet__comment__tests__type_exception.snap
---
source: duvet/src/comment/tests.rs
assertion_line: 81
expression: "parse(\"//@=,//@#\",\nr#\"\n    //@= https://example.com/spec.txt\n    //@= type=exception\n    //@= reason=This isn't possible currently\n    //@# Here is my citation\n    \"#)"
---
(
    {
        Annotation {
            source: "file.rs",
            anno_line: 2,
            original_target: "https://example.com/spec.txt",
            original_text: "https://example.com/spec.txt\n    //@= type=exception\n    //@= reason=This isn't possible currently\n    //@# Here is my citation",
            original_quote: "Here is my citation",
            anno: Exception,
            target: "https://example.com/spec.txt",
            quote: "Here is my citation",
            comment: "This isn't possible currently",
            manifest_dir: "[CWD]",
            level: Auto,
            format: Auto,
            tracking_issue: "",
            feature: "",
            tags: {},
            blob_link: None,
        },
    },
    [],
)
